# kafka-avro-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: avro.rs  context.rs  data.rs  error.rs  main.rs  producer.rs  registry.rs
