[package]
name = "kafka-avro-cli"
version = "0.0.1"
authors = ["Andrii Pohrebniak <andrii.pohrebniak@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = "z"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"

[dependencies]
rdkafka = {version="0.24.0", default-features=false, features = ["ssl"]}
clap = {version = "3.0.0-beta.2"}
avro-rs = {version = "0.11.0", default-features = false}
serde = "1.0"
serde_json = "1.0.59"
ureq = {version="1.5.1", default-features=false, features = ["json", "native-tls"]}
native-tls = "0.2.6" #TODO: features
thiserror = "1.0.22"